# NeuroTechASU

./: .gitignore  P300_Research.txt  README.md  backend_log.txt  eeg_mi_pipeline.pkl  hackathon_spec.txt
.tmp/: pdf_out.txt  read_pdf.py
IM/: data_collection_gui.py  main_dashboard.py  mock_lsl_stream.py  offline_training.py  realtime_inference.py
P300/: requirements.txt
P300/backend/: X_train_v4.npy  _client.py  apply_offline_asr.py  backend_debug_log.txt  bci_classifiers.py  calibrate_bayesian_kde.py  calibrate_epoch_timing.py  calibrate_oscar_delay.py  data_collection.py  debug_stderr.txt  debug_stdout.txt  diagnose_inference.py  diagnose_p300.py  eegnet_classifier.py  evaluate_pipelines.py  mock_backend.py  signal_processing.py  (+16 more)
Proj2/backend/: .gitignore  README.md  pyproject.toml  trial&error.md
Proj2/backend/speller_backend/: __init__.py  __main__.py  chat.py  contexts.py  demo.py  protocol.py  server.py  session.py  speller_glue.py  ssvep_consumer.py
Proj2/backend/tests/: test_chat.py  test_protocol.py  test_session.py  test_speller_glue.py  test_ssvep_consumer.py
SSVEP Tryouts/: Ali_SSVEP_Tryout.csv  Ali_SSVEP_Tryout_results.txt  ssvep_experiment.py  ssvep_screening.py
Signal Quality Algorithm/: README.md  brain_quality_monitor.py  minimal_eeg_filter.py  quality_engine.py  requirements.txt
Zeina_Branch/: _client.py  psychopy_speller.py  realtime_inference.py
scratch/: evaluate_calibration.py  evaluate_self_reported_probs.py  verify_backend_stability.py
speller/: .env  __init__.py  __main__.py  _client.py  requirements.txt  server.py  speller.py
(+56 files in other folders)
