[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "speller-backend"
version = "0.1.0"
description = "WebSocket backend for the Proj2 BCI speller: P300 prefix + SSVEP word selection + LLM word prediction via task5_speller_api."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "websockets>=12",
    "aiohttp>=3.9",
    "task5-speller-api",
]

[project.optional-dependencies]
real-ssvep = [
    "pylsl>=1.16",
    "numpy>=1.24",
    "scipy>=1.10",
    "scikit-learn>=1.3",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
speller-backend = "speller_backend.__main__:main"

[tool.setuptools.packages.find]
include = ["speller_backend*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
